Clear all workouts - functional

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
       <div class="alert-message">
         <p>Are you sure you would like to delete this workout?</p>
-        <button class="btn__clear btn__clear--positive">Yes</button>
-        <button class="btn__clear btn__clear--negative">No</button>
+        <button class="btn__clear btn__alert btn--positive">Yes</button>
+        <button class="btn__clear btn__alert btn--negative">No</button>
       </div>
 
       <ul class="workouts">
@@ -129,7 +129,7 @@
         </li> -->
       </ul>
 
-      <button class="btn__clearAll">Clear All</button>
+      <button class="btn__clear btn__clearAll">Clear All</button>
 
       <p class="copyright">
         &copy; Copyright by
