Delete all workouts - working placeholder solution

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <aside class="sidebar">
       <img src="/img/logo.png" alt="Logo" class="logo" />
 
-      <div class="alert-message">
-        <p>Are you sure you would like to delete this workout?</p>
+      <div class="alert--deletion">
+        <p></p>
         <button class="btn__clear btn__alert btn--positive">Yes</button>
         <button class="btn__clear btn__alert btn--negative">No</button>
       </div>
